{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 18,
  "lineage": "d831ab0d-4b98-6f65-aea2-6ec82b1b6a0f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-17T12:48:50.815-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proud-will-455500-a6/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/networks/default",
            "priority": 1000,
            "project": "proud-will-455500-a6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pipeline"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jaeger_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "16686"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-17T12:48:50.973-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proud-will-455500-a6/global/firewalls/allow-jaeger-dashboard",
            "log_config": [],
            "name": "allow-jaeger-dashboard",
            "network": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/networks/default",
            "priority": 1000,
            "project": "proud-will-455500-a6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/firewalls/allow-jaeger-dashboard",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pipeline"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-17T12:48:50.315-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proud-will-455500-a6/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/networks/default",
            "priority": 1000,
            "project": "proud-will-455500-a6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pipeline"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "traefik_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-17T12:48:51.139-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proud-will-455500-a6/global/firewalls/allow-traefik-dashboard",
            "log_config": [],
            "name": "allow-traefik-dashboard",
            "network": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/networks/default",
            "priority": 1000,
            "project": "proud-will-455500-a6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/firewalls/allow-traefik-dashboard",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pipeline"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "pipeline_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/zones/us-central1-a/disks/pipeline-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-17T12:54:20.715-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/proud-will-455500-a6/zones/us-central1-a/instances/pipeline-vm",
            "instance_id": "7220389736207439747",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "FALSE",
              "ssh-keys": "mateorico2001:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCepkEIyvFHo57x5yFOsKmi2HX7o3z5mQrF9eISYIzfUZWnLer34lpwkPmek8HXb7p5cTtl10S6XLcblYmZFG8iAsQScBypyH08737jXA7W8BeuZD+AzNv5YXpSvNw1u5ju/2F4Im5+vPQ+/GsP392kwJGo+JolYzekkQNW+1EA0IVjXbBd7Jhej1lCL7kK6qZGwwnFKJVqaeRzkqew3Mvya0ePKDvcKx29DMelCtlxHjHnxci0MdQvldg9bro3ENDD4o/zYSrUu1GNL9BERmj8cI/+DOiJS9QxijhdExvhcD8Fgc7Sb+ieK8V4S+P4keakSM2qjg3TEGHpx+7GNuFO3ayAHOmUNXzGxYjZ8rVDGLLn4aBZ5pXmSG/296jVVrOwYBJG6A4MuLGkhKFqkZamu4V7RSLtFDF4JZE [...]
            },
            "metadata_fingerprint": "3tESDvRROOQ=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Crear directorio para apps Docker y permisos\nmkdir -p /opt/apps\nchmod 777 /opt/apps\nchown -R mateorico2001:mateorico2001 /opt/apps\n\n# Instalar Google Cloud SDK\ncurl -sSL https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-linux-x86_64.tar.gz | tar -xz\n./google-cloud-sdk/install.sh --quiet\n\n# Instalar Docker en Debian 12\napt-get update \u0026\u0026 apt-get install -y ca-certificates curl gnupg\nmkdi [...]
            "name": "pipeline-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.194.59.156",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/regions/us-central1/subnetworks/default",
                "subnetwork_project": "proud-will-455500-a6"
              }
            ],
            "project": "proud-will-455500-a6",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proud-will-455500-a6/zones/us-central1-a/instances/pipeline-vm",
            "service_account": [
              {
                "email": "pipeline-vm-sa@proud-will-455500-a6.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "pipeline"
            ],
            "tags_fingerprint": "gkHx3YmWziU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_client_openid_userinfo.me",
            "google_service_account.pipeline_vm_sa"
          ]
        }
      ]
    }
  ]
}